# dji-automation

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  Makefile  README.md  config.ini  pyproject.toml
.github/workflows/: tests.yml
docs/: CI.md  STD.md  STD_Test_Scenarios.xlsx  STP.md  STR.md
framework/: __init__.py  config.py  logger.py
framework/components/: __init__.py  cookie_consent.py  footer.py  search_overlay.py
framework/pages/: __init__.py  base_page.py  cart_page.py  home_page.py  product_page.py  search_results_page.py  store_home_page.py  store_product_page.py
tests/: conftest.py
tests/cart/: test_cart.py
tests/navigation/: test_navigation.py  test_store_region_diag.py
tests/product/: test_product_page.py
tests/search/: test_search.py
tests/smoke/: test_homepage_smoke.py
