[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dji-automation"
version = "0.1.0"
description = "UI automation framework for the DJI Global storefront (learning/portfolio project)."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Max Rybkin" }]

dependencies = [
    "playwright==1.58.0",
    "pytest==9.0.3",
    "allure-pytest==2.15.3",
]

[project.optional-dependencies]
dev = [
    "ruff==0.9.2",
    "black==25.1.0",
    "pre-commit==4.0.1",
    "pytest-xdist==3.6.1",
]

[tool.setuptools.packages.find]
include = ["framework*"]
exclude = ["tests*", "docs*", "scripts*"]

# ----------------------------------------------------------------------------
# Pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--alluredir=allure-results",
    "--clean-alluredir",
    "--strict-markers",
    "-ra",
]
markers = [
    "smoke: fast critical-path checks run on every execution",
    "regression: full regression suite",
    "slow: long-running test, excluded from default runs",
]

# ----------------------------------------------------------------------------
# Black
# ----------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]

# ----------------------------------------------------------------------------
# Ruff — linter only; formatting is delegated to black.
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import sort, B bugbear, UP pyupgrade,
# SIM code simplifications, RUF ruff-specific good-practice checks.
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",  # line length handled by black
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]  # `assert False` pattern is acceptable in tests
